--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="h2c13"><a class="h2t8">Book a Test Ride</a><div class="arrow8"></div></div>
     </div>
     <div class="hedder3">
-        <div class="h3c1"><img class="home" src="image/charm--home.png"><div class="arrow9"></div></div>
+        <div class="h3c1"><img class="home" src="charm--home.png"><div class="arrow9"></div></div>
         <div class="h3c2"><a class="h3t1">Motorcycles</a><div class="arrow10"></div></div>
         <div class="h3c3"><a class="h3t2">Continental GT</a></div>
     </div>
