--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="h1c7"><a class="h1t6">Support</a></div>
         <div class="h1c8"><a class="h1t7">Locate Us</a></div>
         <div class="h1c9"><a class="login">Login</a><div class="arrow5"></div></div>
-        <div class="h1c10"><img class="searchicon" src="image/searchicon.png"></div>
-        <div class="h1c11"><img class="flag" src="image/india.png"></div>
+        <div class="h1c10"><img class="searchicon" src="searchicon.png"></div>
+        <div class="h1c11"><img class="flag" src="india.png"></div>
         <div class="h1c12"><a class="language">En</a><div class="arrow6"></div></div>
     </div>
     <div class="hedder2">
@@ -170,9 +170,9 @@
          </div>
          </div>
          <div class="page14">
-            <div class="p14c1"> <img class="image6" src="image/tap (2).png" alt=""> <p class="p14t1">Book a Test Ride</p><div class="arrow24"></div></div>
-            <div class="p14c2"><img class="image7" src="image/address.png" alt=""> <p class="p14t2">Find a Store</p><div class="arrow25"></div></div> 
-            <div class="p14c3"><img class="image8" src="image/tools.png" alt=""> <p class="p14t3">Book a Service</p><div class="arrow26"></div></div>
+            <div class="p14c1"> <img class="image6" src="tap (2).png" alt=""> <p class="p14t1">Book a Test Ride</p><div class="arrow24"></div></div>
+            <div class="p14c2"><img class="image7" src="address.png" alt=""> <p class="p14t2">Find a Store</p><div class="arrow25"></div></div> 
+            <div class="p14c3"><img class="image8" src="tools.png" alt=""> <p class="p14t3">Book a Service</p><div class="arrow26"></div></div>
          </div>
     <footer class="footer">
         <div class="fc1">
